--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-slick": "^0.23.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-infinite-scroll-component": "^6.0.0",
     "react-ionicons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
